--- a/.gitignore
+++ b/.gitignore
@@ -1,222 +1,51 @@
 ﻿################################################################################
-# 此 .gitignore 文件已由 Microsoft(R) Visual Studio 自动创建。
+# 通用忽略规则（适用于所有 .NET 项目）
 ################################################################################
 
-/.vs
-/AuthServer/AuthServer.Host/node_modules
-/AuthServer/AuthServer.Host/.vs/AuthServer.Host
-/AuthServer/AuthServer.Host/bin/
-/AuthServer/AuthServer.Host/Logs
-/AuthServer/AuthServer.Host/obj
-/IdentityService/IdentityService.Host/bin/
-/IdentityService/IdentityService.Host/.vs/IdentityService.Host/v16
-/IdentityService/IdentityService.Host/Logs
-/IdentityService/IdentityService.Host/obj
-/IdentityService/IdentityService.Host/.vs/IdentityService.Host/DesignTimeBuild
-/TenantService/TenantService.Host/.vs/TenantService.Host
-/TenantService/TenantService.Host/bin/
-/TenantService/TenantService.Host/Logs
-/TenantService/TenantService.Host/obj
-/MicroServices/Business/.vs/Business/v16
-/MicroServices/Business/Business.Application/bin/Debug
-/MicroServices/Business/Business.Application/obj
-/MicroServices/Business/Business.Application.Contracts/bin/Debug
-/MicroServices/Business/Business.Application.Contracts/obj
-/MicroServices/Business/Business.Domain/bin/Debug
-/MicroServices/Business/Business.Domain/obj
-/MicroServices/Business/Business.EntityFrameworkCore/bin/Debug
-/MicroServices/Business/Business.EntityFrameworkCore/obj
-/MicroServices/Business/Business.Host/obj
-/MicroServices/Business/Business.HttpApi/bin/
-/MicroServices/Business/Business.HttpApi/obj
-/MicroServices/Business/Business.HttpApi.Client/bin/
-/MicroServices/Business/Business.HttpApi.Client/obj
-/MicroServices/Business/.vs/Business/DesignTimeBuild
-/MicroServices/Business/Business.Host/bin/
-/MicroServices/Business/Business.Host/Logs
-/Gateways/WebAppGateway/.vs/WebAppGateway
-/Gateways/WebAppGateway/WebAppGateway.Host/bin/
-/Gateways/WebAppGateway/WebAppGateway.Host/Logs
-/Gateways/WebAppGateway/WebAppGateway.Host/obj
-/MicroServices/Business/.vs/Business/config
-/MicroServices/Business/Business.HttpApi/bin/Debug
-/AuthServer/AuthServer.Host/publish
-/MicroServices/Business/Business.Host/publish
-/Gateways/InternalGateway/.vs/InternalGateway
-/Gateways/InternalGateway/InternalGateway.Host/bin/
-/Gateways/InternalGateway/InternalGateway.Host/Logs
-/Gateways/InternalGateway/InternalGateway.Host/obj
-/BaseService/.vs
-/BaseService/BaseService.Application/bin/
-/BaseService/BaseService.Application/obj
-/BaseService/BaseService.Application.Contracts/bin/
-/BaseService/BaseService.Application.Contracts/obj
-/BaseService/BaseService.Domain/bin/
-/BaseService/BaseService.Domain/obj
-/BaseService/BaseService.EntityFrameworkCore/bin/
-/BaseService/BaseService.EntityFrameworkCore/obj
-/BaseService/BaseService.Host/bin/
-/BaseService/BaseService.Host/Logs
-/BaseService/BaseService.Host/obj
-/AbpModules/Identity/Volo.Abp.Identity.Application/bin/Debug/netstandard2.0
-/AbpModules/Identity/Volo.Abp.Identity.Application/obj
-/AbpModules/Identity/Volo.Abp.Identity.Application.Contracts/bin/Debug/netstandard2.0
-/AbpModules/Identity/Volo.Abp.Identity.Application.Contracts/obj
-/AbpModules/Identity/Volo.Abp.Identity.Domain/bin/Debug/netstandard2.0
-/AbpModules/Identity/Volo.Abp.Identity.Domain/obj
-/AbpModules/Identity/Volo.Abp.Identity.Domain.Shared/bin/Debug
-/AbpModules/Identity/Volo.Abp.Identity.Domain.Shared/obj
-/AbpModules/Identity/Volo.Abp.Identity.EntityFrameworkCore/bin/Debug/netstandard2.0
-/AbpModules/Identity/Volo.Abp.Identity.EntityFrameworkCore/obj
-/AbpModules/Identity/Volo.Abp.Identity.HttpApi/bin/
-/AbpModules/Identity/Volo.Abp.Identity.HttpApi/obj
-/AbpModules/Identity/Volo.Abp.PermissionManagement.Domain.Identity/bin/Debug/netstandard2.0
-/AbpModules/Identity/Volo.Abp.PermissionManagement.Domain.Identity/obj
-/AuthServer/.vs
-/BaseService/BaseService.HttpApi/bin/
-/BaseService/BaseService.HttpApi/obj
-/BaseService/BaseService.HttpApi.Client/obj
-/BaseService/BaseService.HttpApi.Client/bin/
-/AbpModules/Identity/Volo.Abp.Identity.Application/bin/Debug
-/AbpModules/Identity/Volo.Abp.Identity.Application.Contracts/bin/Debug
-/AbpModules/Identity/Volo.Abp.Identity.Domain/bin/Debug
-/AbpModules/Identity/Volo.Abp.Identity.EntityFrameworkCore/bin/Debug
-/AbpModules/Identity/Volo.Abp.Identity.HttpApi/bin/Debug
-/AbpModules/Identity/Volo.Abp.PermissionManagement.Domain.Identity/bin/Debug
-/AbpModules/Identity/.vs
-/AbpModules/Identity/Identity.sln
-/MicroServices/FileSystem/.vs/FileSystem
-/MicroServices/FileSystem/FileSystem.Application/bin/Debug/netstandard2.0
-/MicroServices/FileSystem/FileSystem.Application/obj
-/MicroServices/FileSystem/FileSystem.Application.Contracts/bin/Debug/netstandard2.0
-/MicroServices/FileSystem/FileSystem.Application.Contracts/obj
-/MicroServices/FileSystem/FileSystem.Domain/bin/Debug/netstandard2.0
-/MicroServices/FileSystem/FileSystem.Domain/obj
-/MicroServices/FileSystem/FileSystem.EntityFrameworkCore/bin/Debug/netstandard2.0
-/MicroServices/FileSystem/FileSystem.EntityFrameworkCore/obj
-/MicroServices/FileSystem/FileSystem.Host/bin/
-/MicroServices/FileSystem/FileSystem.Host/obj
-/MicroServices/FileSystem/FileSystem.Host/Logs
-/MicroServices/FileSystem/FileSystem.Application/bin/Release/netstandard2.0
-/MicroServices/FileSystem/FileSystem.Application.Contracts/bin/Release/netstandard2.0
-/MicroServices/FileSystem/FileSystem.Domain/bin/Release/netstandard2.0
-/MicroServices/FileSystem/FileSystem.EntityFrameworkCore/bin/Release/netstandard2.0
-/MicroServices/FileSystem/FileSystem.Host/bin/Release/netcoreapp3.1
-/MicroServices/FileStorage/.vs
-/MicroServices/FileStorage/FileStorage.Application/bin/Debug/netstandard2.0
-/MicroServices/FileStorage/FileStorage.Application/obj
-/MicroServices/FileStorage/FileStorage.Application.Contracts/bin/Debug/netstandard2.0
-/MicroServices/FileStorage/FileStorage.Application.Contracts/obj
-/MicroServices/FileStorage/FileStorage.Domain/bin/Debug/netstandard2.0
-/MicroServices/FileStorage/FileStorage.Domain/obj
-/MicroServices/FileStorage/FileStorage.EntityFrameworkCore/bin/Debug/netstandard2.0
-/MicroServices/FileStorage/FileStorage.EntityFrameworkCore/obj
-/MicroServices/FileStorage/FileStorage.Host/bin/
-/MicroServices/FileStorage/FileStorage.Host/obj
-/MicroServices/FileStorage/FileStorage.Host/Logs
-/AuthServer/AuthServer.Host/bin/Debug/net5.0
-/BaseService/BaseService.Application/bin/Debug/net5.0
-/BaseService/BaseService.Application.Contracts/bin/Debug/net5.0
-/BaseService/BaseService.Domain/bin/Debug/net5.0
-/BaseService/BaseService.EntityFrameworkCore/bin/Debug/net5.0
-/BaseService/BaseService.Host/bin/Debug/net5.0
-/BaseService/BaseService.HttpApi/bin/Debug/net5.0
-/BaseService/BaseService.HttpApi.Client/bin/Debug/net5.0
-/Gateways/WebAppGateway/WebAppGateway.Host/bin/Debug/net5.0
-/MicroServices/Business/Business.Host/bin/Debug/net5.0
-/MicroServices/Business/Business.HttpApi.Client/bin/Debug/net5.0
-/Gateways/InternalGateway/InternalGateway.Host/bin/Debug/net5.0
-/MicroServices/Business/Business.Core/obj
-/MicroServices/Business/Business.Core/bin/Debug/netstandard2.0
-/WebApp/Blazor/.vs/Blazor
-/WebApp/Blazor/Blazor.App/bin/Debug/net5.0
-/WebApp/Blazor/Blazor.App/obj
-/WebApp/Blazor/Blazor.App.Web/bin/Debug/net5.0
-/WebApp/Blazor/Blazor.App.Web/obj
-/AuthServer/AuthServer.Host/.vs/AuthServer
-/MicroServices/FileStorage/FileStorage.Application/bin/Debug/netstandard2.1
-/MicroServices/FileStorage/FileStorage.Application.Contracts/bin/Debug/netstandard2.1
-/MicroServices/FileStorage/FileStorage.Domain/bin/Debug/netstandard2.1
-/MicroServices/FileStorage/FileStorage.EntityFrameworkCore/bin/Debug/netstandard2.1
-/MicroServices/FileStorage/FileStorage.Host/bin/Debug/net5.0
-/AuthServer/AuthServer.Host/bin/Debug/net6.0
-/BaseService/BaseService.Application/bin/Debug/net6.0
-/BaseService/BaseService.Application.Contracts/bin/Debug/net6.0
-/BaseService/BaseService.Domain/bin/Debug/net6.0
-/BaseService/BaseService.EntityFrameworkCore/bin/Debug/net6.0
-/BaseService/BaseService.Host/bin/Debug/net6.0
-/BaseService/BaseService.HttpApi/bin/Debug/net6.0
-/BaseService/BaseService.HttpApi.Client/bin/Debug/net6.0
-/MicroServices/Business/Business.Host/bin/Debug/net6.0
-/MicroServices/Business/Business.HttpApi.Client/bin/Debug/net6.0
-/MicroServices/FileStorage/FileStorage.Application/bin/Debug/net6.0
-/MicroServices/FileStorage/FileStorage.Domain/bin/Debug/net6.0
-/MicroServices/FileStorage/FileStorage.EntityFrameworkCore/bin/Debug/net6.0
-/MicroServices/FileStorage/FileStorage.Host/bin/Debug/net6.0
-/WebApp/Blazor/Blazor.App/bin/Debug/net6.0
-/WebApp/Blazor/Blazor.App.Web/bin/Debug/net6.0
-/AuthServer/AuthServer.Host/bin/Release/net6.0
-/MicroServices/Business/.vs/Business
-/MicroServices/Business/Business.Core/bin/Debug/netstandard2.1
-/Gateways/WebAppGateway/WebAppGateway.Host/bin/Debug/net6.0
-/Gateways/InternalGateway/InternalGateway.Host/bin/Debug/net6.0
-/MicroServices/FileStorage/FileStorage.Application.Contracts/bin/Debug
-/AuthServer/IdentityServer/AuthServer.Host/obj
-/AuthServer/IdentityServer/AuthServer.Host/bin/Debug/net6.0
-/AuthServer/IdentityServer/AuthServer.Host/Logs
-/AuthServer/IdentityServer/.vs/AuthServer
-/AuthServer/OpenIddict/AuthServer.Host/node_modules
-/AuthServer/OpenIddict/AuthServer.Host/bin/Debug/net6.0
-/AuthServer/OpenIddict/AuthServer.Host/Logs
-/AuthServer/OpenIddict/AuthServer.Host/obj
-/AuthServer/OpenIddict/AuthServer.Host/wwwroot/libs
-/AuthServer/OpenIddict/.vs/OpenIddict
-/MicroServices/Business/.vs/ProjectEvaluation
-/AuthServer/OpenIddict/.vs/ProjectEvaluation
-/Gateways/InternalGateway/.vs/ProjectEvaluation
-/Gateways/WebAppGateway/.vs/ProjectEvaluation
-/BaseService/BaseService.Application.Contracts/bin/Debug
-/BaseService/BaseService.HttpApi/bin/Debug
-/BaseService/BaseService.HttpApi.Client/bin/Debug
-/AuthServer/IdentityServer/AuthServer.Host/bin/Debug/net7.0
-/BaseService/BaseService.Application/bin/Debug/net7.0
-/BaseService/BaseService.Domain/bin/Debug/net7.0
-/BaseService/BaseService.EntityFrameworkCore/bin/Debug/net7.0
-/BaseService/BaseService.Host/bin/Debug/net7.0
-/AuthServer/IdentityServer/.vs/ProjectEvaluation
-/MicroServices/FileStorage/FileStorage.Application/bin/Debug/net7.0
-/MicroServices/FileStorage/FileStorage.Domain/bin/Debug/net7.0
-/MicroServices/FileStorage/FileStorage.EntityFrameworkCore/bin/Debug/net7.0
-/MicroServices/FileStorage/FileStorage.Host/bin/Debug/net7.0
-/Gateways/WebAppGateway/WebAppGateway.Host/bin/Debug/net7.0
-/MicroServices/Business/Business.Host/bin/Debug/net7.0
-/MicroServices/Business/Business.HttpApi.Client/bin/Debug/net7.0
-/Gateways/InternalGateway/InternalGateway.Host/bin/Debug/net7.0
-/AuthServer/OpenIddict/AuthServer.Host/bin/Debug/net7.0
-/MicroServices/FileStorage/FileStorage.Host/wwwroot
-/Publish
-
-AuthServer/IdentityServer/AuthServer.Host/bin/
-MicroServices/FileStorage/FileStorage.Application.Contracts/bin/
-MicroServices/FileStorage/FileStorage.Application/bin/
-MicroServices/FileStorage/FileStorage.Domain/bin/
-MicroServices/FileStorage/FileStorage.EntityFrameworkCore/bin/
-/MicroServices/FileStorage/FileStorage.HttpApi.Client/obj
-/MicroServices/FileStorage/FileStorage.HttpApi.Client/bin
-/MicroServices/AAA/host/AAA.HttpApi.Host/UploadFile
-/MicroServices/Business/Business.Application.Contracts/bin
-/MicroServices/Business/Business.Application/bin
-/MicroServices/Business/Business.Core/bin
-/MicroServices/Business/Business.Domain/bin
-/MicroServices/Business/Business.EntityFrameworkCore/bin
-/MicroServices/Business/Business.Host/wwwroot
-/MicroServices/AAA/host/AAA.HttpApi.Host/Logs
-document/~$Problem Solving_ A3 Structure_Template_02_20230704.xlsx
-/MicroServices/Business
-/MicroServices/Feedback_Worker/src/FeedbackWorkerService/bin/
-
+# 编译输出
+bin/
+obj/
+publish/
 *.dll
 *.pdb
-/MicroServices/Feedback_Worker/src/FeedbackWorkerService/bin
-MicroServices/Feedback_Worker/src/FeedbackWorkerService/log.txt
-/MicroServices/Feedback_Worker/src/FeedbackWorkerService/bin
+
+# 本地日志和缓存
+Logs/
+*.log
+
+# 用户文件
+*.user
+*.suo
+*.userosscache
+*.sln.docstates
+*.ncrunch*
+*.vssscc
+*.vspscc
+*.vssscc
+*.vsp
+*.vsmdi
+
+# Rider / VS Code
+.idea/
+.vscode/
+
+# Visual Studio
+.vs/
+!**/.vsconfig
+
+# Node.js
+node_modules/
+
+# 临时文件
+*.tmp
+*.bak
+~$*
+
+# 文档临时文件
+document/~$*
+
+# 本地上传目录或文件（请根据需要保留）
+**/UploadFile/
+/MicroServices/FileStorage/FileStorage.Host/wwwroot
+/MicroServices/Business/Business.Host/wwwroot
+/MicroServices/Business
