--- a/MicroServices/Feedback_Worker/src/FeedbackWorkerService/appsettings.Development.json
+++ b/MicroServices/Feedback_Worker/src/FeedbackWorkerService/appsettings.Development.json
@@ -34,6 +34,8 @@
     "Filter": "*.log"
   },
   "AoiInfo": {
-    "Line": "Line45"
+    "Line": "Line45",
+    "_DebounceDelay":"延迟处理log文件的时间,单位分钟",
+    "DebounceDelay": 2
   }
 }
